@@ -28,6 +28,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs += [
+            '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+    ]
 }
 
 application {
@@ -39,3 +43,4 @@ jacocoTestReport {
         xml.required = true
     }
 }
+
